--- a/main.html
+++ b/main.html
@@ -9,11 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<div>
 
-<h1 id="TEXT"> "Welcome to the world of Web development" </h1>
-
-</div>
+<h1 id="text"> "Welcome to the world of Web development" </h1>
 
 	</div>
 
