--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<div id="Text">
 
-<h1 id="text"> "Welcome to the world of Web development" </h1>
+ "Welcome to the world of Web development" 
 
 	</div>
 
